--- a/estilo-iphone.css
+++ b/estilo-iphone.css
@@ -40,6 +40,7 @@ header > h1{
     font-size: 3em;
     margin-bottom: 8px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.589);
+    letter-spacing: 4px;
 }
 
 header p{
@@ -61,8 +62,7 @@ nav{
 }
 
 nav > a{
-    font-weight: bold;
-    border-radius: 5px;
+    font-weight: normal;
     text-decoration: none;
     color: rgba(255, 255, 255, 0.671);
     margin-right: 15px;
@@ -70,11 +70,16 @@ nav > a{
     padding: 5px;
     font-size: 1em;
     font-family: var(--fonte-titulo);
+    border-radius: 10px;
 }
 
 nav > a:hover{
-    background-color: #0583F2;
-    color: #05F2F2;
+    background-color: #0583f2d5;
+    color: #000000;
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.459);
+    padding: 7px;
+    letter-spacing: 1px;
+    font-weight: bold;
 }
 
 main{
@@ -113,6 +118,7 @@ main a{
 }
 
 main a:hover{
+    transition-duration: 0.5s;
     color: #000000;
     background-color: white;
     text-shadow: 1px 1px 1px black;
@@ -126,9 +132,9 @@ strong{
 }
 
 strong:hover{
-    color: black;
-    text-shadow: 1px 1px 0px rgb(255, 255, 255);
-    font-weight: bold;
+    transition-duration: 0.5s;
+    color: rgb(75, 75, 75);
+    font-weight: normal;
 }
 
 a.externos:after{
@@ -170,6 +176,8 @@ a.externos:after{
     padding-bottom: 5px;
     text-decoration: underline;
     background-color: rgba(0, 0, 0, 0.637);
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 .com-imagem{
@@ -196,7 +204,8 @@ section#img001{
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    border-radius: 10px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 section#img002{
@@ -205,8 +214,7 @@ section#img002{
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    border-radius: 10px;
-    margin-top: 20px;
+    margin-top: 15px;
 }
 
 section#img003{
@@ -215,8 +223,9 @@ section#img003{
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    border-radius: 10px;
     margin-top: 20px;
+    border-bottom-right-radius:5px ;
+    border-bottom-left-radius: 5px;
 }
 
 section#img004{
@@ -225,8 +234,9 @@ section#img004{
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    border-radius: 10px;
     margin-top: 20px;
+    border-bottom-right-radius:5px ;
+    border-bottom-left-radius: 5px;
 }
 
 section#img005{
@@ -235,8 +245,9 @@ section#img005{
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    border-radius: 10px;
     margin-top: 20px;
+    border-bottom-right-radius:5px ;
+    border-bottom-left-radius: 5px;
 }
 
 section#img006{
@@ -245,7 +256,6 @@ section#img006{
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    border-radius: 10px;
     margin-top: 20px;
 }
 
@@ -255,7 +265,8 @@ section#img007{
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    border-radius: 10px;
+    border-bottom-right-radius:5px ;
+    border-bottom-left-radius: 5px;
     margin-top: 20px;
 }
 
@@ -333,6 +344,7 @@ abbr{
 }
 
 abbr:hover{
+    transition-duration: 0.4s;
     text-shadow: 1px 1px 0px  rgb(0, 0, 0);
     background-color: #000a16;
     padding: 7px;
