--- a/estilo-iphone.css
+++ b/estilo-iphone.css
@@ -363,18 +363,6 @@ abbr:hover{
     box-shadow: 1px 1px 2px rgb(255, 255, 255);
 }
 
-#sessão-tabela{
-    background-color: #012350c9;
-    max-width: 1000px;
-    min-width: 400px;
-    margin-top: 30px;
-    border-radius: 5px;
-    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.445);
-    padding-left: 6px;
-    padding-right: 10px;
-    padding-bottom: 15px;
-}
-
 #titulo-tabela{
     background-image: linear-gradient(to right, black,  transparent);
     color:white ;
@@ -397,6 +385,17 @@ table{
     min-width: 420px;
     margin: auto;
     margin-top: 15px;
+}
+
+#div-table{
+    overflow-x: auto;
+    background-color: #012350c9;
+    margin-top: 30px;
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.445);
+    padding-left: 6px;
+    padding-right: 10px;
+    padding-bottom: 15px;
 }
 
 th{
