--- a/estilo-pagina-iframe.css
+++ b/estilo-pagina-iframe.css
@@ -14,7 +14,10 @@
     background-color: #0B2B55;
     margin-top: 30px;
     border-radius: 5px;
-    padding: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 15px;
+    padding-left: 10px;
 }
 
 iframe{
@@ -24,6 +27,7 @@ iframe{
     width: 100%;
     height: 300px;
     margin: auto;
+
 }
 
 #header-links-iframes{
