--- a/estilo-pagina-iframe.css
+++ b/estilo-pagina-iframe.css
@@ -25,9 +25,8 @@ iframe{
     border: 2px solid black;
     border-radius: 5px;
     width: 100%;
-    height: 300px;
+    min-height: 270px;
     margin: auto;
-
 }
 
 #header-links-iframes{
