--- a/estilo-iphone.css
+++ b/estilo-iphone.css
@@ -138,7 +138,6 @@ strong{
 strong:hover{
     transition-duration: 0.5s;
     color: rgb(75, 75, 75);
-    font-weight: normal;
 }
 
 a.externos:after{
@@ -477,16 +476,15 @@ footer{
 #link-footer{
     color: white;
     text-decoration: none;
-    transition-duration: 0.4s;
+    box-sizing: border-box;
+    padding: 5px;
+    box-shadow: 2px 2px 5px white;
 }
 
 #link-footer:hover{
     color: #ffffff;
-    padding: 5px;
-    background-color: #011777;
+    box-shadow: 2px 2px 10px white;
     border-radius: 5px;
-    border: 2px solid rgb(17, 0, 255);
-    letter-spacing: 1px;
-    font-weight: bold;
-    outline: 3px solid rgb(3, 0, 197);
+    border: 2px solid rgb(255, 255, 255);
+    transition: transform .3s border 2s;
 }
