--- a/mediasqueries.css
+++ b/mediasqueries.css
@@ -73,6 +73,14 @@
 }
 
 @media screen and (min-widht:481px) and (max-width:768px){
+
+
+
+
+
+    #caixa-informação{
+        display: block;
+    }
        
 }
 
@@ -136,5 +144,81 @@
     #quarto-titulo-h1{
         font-size: 2.8em;
     }
+    
+    aside{
+        padding: 30px;
+    }
+
+    aside > .quarto-titulo-h3{
+        font-size: 2em;
+        margin-left: -30px;
+        margin-right: -30px;
+        margin-top: -30px;
+    }
+
+    aside > .paragrafo-aside{
+        font-size: 1.7em;
+    }
+
+    abbr{
+        font-size: 1.5em;
+        line-height: 2em;
+    }
+
+    abbr:hover{
+        color: white;
+        transition-duration: 0.4s;
+        text-shadow: 1px 1px 0px  rgb(0, 0, 0);
+        background-color: #000a16;
+        padding: 7px;
+        border-radius: 5px;
+        margin-left: 5px;
+        box-shadow: 1px 1px 2px rgb(255, 255, 255);
+    }
+
+    #div-table{
+        width: 100%;
+    }
+
+    table{
+        width: 100%;
+    }
+    
+    th{
+        font-size: 1.5em;
+    }
+
+    td{
+        padding: 15px;
+    }
+
+    td.nomes-modelos{
+        font-size: 1.1em;
+    }
+
+    td.texto-tabela{
+        font-size: 1.3em;
+    }
+
+    td.numeros-tabela{
+        font-size: 1.5em;
+        padding: 15px;
+    }
+
+    #titulo-tabela{
+        font-size: 2em;
+        letter-spacing: 3px;
+    }
+
+    #caixa-informação{
+        display: block;
+    }
+
+    footer{
+        padding: 20px;
+        font-size: 1.5em;
+        text-align: center;
+    }
+
    
 }
