--- a/mobile.css
+++ b/mobile.css
@@ -294,16 +294,18 @@ div.videos{
     position: relative;
     background-color: #012350;
     margin: 20px -20px 30px -20px;
-    padding: 20px;
-    padding-bottom:65% ;
+    padding-bottom: 56.25%; 
+    height: 0;
+    overflow: hidden;
 }
 
 div.videos > iframe{
     position: absolute;
-    top:5% ;
-    left:5% ;
-    width:90% ;
-    height: 90%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
 }
 
 aside{
