--- a/mediasqueries.css
+++ b/mediasqueries.css
@@ -284,4 +284,32 @@
         text-align: center;
     }
 
+    div.videos {
+        position: relative;
+        background-color: #012350;
+        margin: 20px auto;
+        padding: 16px;
+        border-radius: 16px;
+        max-width: 100%;
+        box-sizing: border-box;
+        overflow: hidden;
+    }
+    
+    .div-video-inner {
+        position: relative;
+        width: 100%;
+        padding-bottom: 56.25%;
+        height: 0;
+    }
+    
+    .div-video-inner iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: 0;
+        border-radius: 12px;
+    }
+
 }
