--- a/mobile.css
+++ b/mobile.css
@@ -290,22 +290,21 @@ section#img007{
     margin-top: 20px;
 }
 
-div.videos{
-    position: relative;
+div.videos {
     background-color: #012350;
-    margin: 20px -20px 30px -20px;
-    padding-bottom: 56.25%; 
-    height: 0;
-    overflow: hidden;
+    margin: 20px auto;
+    padding: 16px;
+    border-radius: 16px;
+    max-width: 100%;
+    box-sizing: border-box;
 }
 
-div.videos > iframe{
-    position: absolute;
-    top: 0;
-    left: 0;
+div.videos > iframe {
     width: 100%;
-    height: 100%;
+    aspect-ratio: 16 / 9;
     border: 0;
+    border-radius: 12px;
+    display: block;
 }
 
 aside{
